apps/docs/v0.2.9/guides/workspaces.mdx
---
title: "Workspaces and operations"
description: "Create named workspaces from workflow output and expose project-specific commands with rig run."
noindex: true
---

`rig apply --workflow <workflow>` prepares workflow context.
`rig create --workflow <workflow> <name>` turns that context into a named
workspace. `rig run <name> <operation>` runs actions against an existing
workspace.

## Add a workspace lifecycle

A workflow becomes workspace-capable when it has `.workspace({ create, remove
})`.

```ts
export const website = app
  .sequence("website")
  .add(websiteSetup)
  .workspace({
    create: async ({ workflow, providers, workspace }) => {
      const { vmId } = await providers.freestyle.client.vms.create({
        snapshotId: workflow.ctx.snapshotId,
        logger: console.log,
      });

      return {
        vmId,
        name: workspace.name,
        repoPath: workflow.ctx.repoPath,
        devPort: workflow.ctx.devPort,
      };
    },
    remove: async ({ providers, workspace }) => {
      await providers.freestyle.client.vms.delete({
        vmId: workspace.ctx.vmId,
      });
    },
  });
```

`create` receives:

- `workflow.name`, the workflow name.
- `workflow.ctx`, the final context produced by the workflow graph.
- `workspace.name`, the requested workspace name.
- `providers`, the configured provider runtimes.
- `local`, host helpers such as `open(...)` and host capabilities.
- `step`, runtime helpers for metadata and invalidation.

The object returned from `create` is the workspace context. It must be
JSON-serializable, and Rigkit stores it in `.rigkit/state.sqlite`.

`remove` receives the saved workspace context and should clean up provider
resources.

## Create, list, and remove

Apply the workflow before creating workspaces:

```sh
rig apply --workflow website
rig create --workflow website dev
rig ls
rig rm dev
```

Workspace names may contain letters, numbers, `.`, `_`, and `-`, and cannot
start with `-`.

## Add workspace operations

Workspace operations are project-defined actions. They run with the saved
workspace context.

```ts
.workspaceOperation("status", {
  title: "Status",
  description: "Return workspace details",
  run: async ({ workspace }) => ({
    workspace: workspace.name,
    vmId: workspace.ctx.vmId,
    repoPath: workspace.ctx.repoPath,
  }),
});
```

Run it with:

```sh
rig run dev status
```

Operation results must be JSON-serializable. With `--json`, the CLI prints
machine-readable output.

## Open a terminal

Freestyle terminal sessions are provider-owned browser terminals. The CLI only
presents the provider URL.

```ts
.workspaceOperation("ssh", {
  title: "SSH",
  description: "Open an interactive shell",
  run: async ({ providers, workspace }) => {
    await providers.terminal.open(`SSH ${workspace.name}`, {
      ssh: await providers.freestyle.createSSHOptions({
        vmId: workspace.ctx.vmId,
      }),
      command: `cd ${workspace.ctx.repoPath} && exec bash -l`,
      keepOpenAfterCommand: true,
      instructions: "Exit the SSH session when you are done.",
    });
  },
});
```

## Open cmux

The cmux provider delegates to a trusted host capability registered by the CLI.
Use the Freestyle helper to create cmux-compatible SSH options:

```ts
.workspaceOperation("open-cmux", {
  title: "Open cmux",
  description: "Open the workspace in cmux",
  run: async ({ providers, workspace }) => {
    await providers.cmux.open({
      name: workspace.name,
      ssh: await providers.freestyle.cmux.createSshOptions({
        vmId: workspace.ctx.vmId,
      }),
      cwd: workspace.ctx.repoPath,
      surfaceLayout: "tabs",
      terminals: [
        { command: workspace.ctx.devCommand },
        { command: "codex", focus: false },
      ],
      url: `http://localhost:${workspace.ctx.devPort}`,
      focus: true,
      waitForRemoteReady: {
        timeoutMs: 90 * 1000,
        requireProxy: true,
      },
    });
  },
});
```

Use `surfaceLayout: "tabs"` to put terminals and the browser URL in tabs in the
same cmux pane. Omit it, or set `"splits"`, for split panes.

## Open VS Code

The Freestyle provider can build a VS Code Remote SSH URL:

```ts
.workspaceOperation("open-vscode", {
  title: "Open VS Code",
  run: async ({ providers, workspace, local }) => {
    const url = await providers.freestyle.vscode.createUrl({
      vmId: workspace.ctx.vmId,
      cwd: workspace.ctx.repoPath,
    });
    await local.open(url);
  },
});
```

## Add operation inputs

Workspace operations can ask for extra input with Zod schemas. Runtime hosts use
the generated JSON Schema to prompt or build CLI flags; Zod enums become select
prompts.

```ts
import { z } from "@rigkit/sdk";

.workspaceOperation("dev", {
  title: "Start dev server",
  input: z.object({
    port: z.number().default(3000).describe("Port to use"),
    mode: z.enum(["local", "tunnel"]).default("local").describe("Dev mode"),
    watch: z.boolean().default(true).describe("Enable watch mode"),
  }),
  run: async ({ input, workspace }) => {
    return {
      workspace: workspace.name,
      port: input.port,
      mode: input.mode,
      watch: input.watch,
    };
  },
});
```

For a workspace operation, the main target workspace still comes from
`rig run <workspace> <operation>`. Put extra operation inputs in the Zod object.

## Add workflow-level operations

Use `.operation(...)` for commands that are not tied to one workspace. Commands
that act on a specific workspace should usually be `.workspaceOperation(...)`.

```ts
.operation("release-notes", {
  title: "Release notes",
  input: z.object({
    release: z.string().min(1).describe("Release version"),
    channel: z.enum(["stable", "canary"]).default("stable").describe("Release channel"),
  }),
  run: async ({ input }) => ({
    release: input.release,
    channel: input.channel,
  }),
});
```

Workflow-level operations are exposed through the runtime operation manifest for
hosts and API clients. The current CLI has first-class commands for core
operations such as `plan`, `apply`, and `create`, plus workspace operations
through `rig run <workspace> <operation>`.

Built-in command ids such as `plan`, `apply`, `create`, `run`, and `help` are
reserved operation ids.

## Keep lifecycle hooks defensive

If `create` allocates provider resources and then fails, clean up before
throwing:

```ts
create: async ({ workflow, providers, workspace }) => {
  const { vmId } = await providers.freestyle.client.vms.create({
    snapshotId: workflow.ctx.snapshotId,
    logger: console.log,
  });

  try {
    const branch = `rigkit/${workspace.name}`;
    // Configure the VM here.
    return { vmId, branch };
  } catch (error) {
    await providers.freestyle.client.vms.delete({ vmId });
    throw error;
  }
}
```

This keeps failed workspace creates from leaking VMs or other provider
resources.
